fix getting sms by token and path variables in handlers
